Support marshalling of GVariants for closures

Add GVariant handling to pyg_value_{as,from}_pyobject(), so that closures can
be called with GVariant arguments and return GVariant.

Unmark the corresponding test case as "expected failure", and also add cases
for None values and type mismatches.

https://bugzilla.gnome.org/show_bug.cgi?id=656554